Fix layout when album titles are too long

--- a/src/components/Album/AlbumPreview/styles.scss
+++ b/src/components/Album/AlbumPreview/styles.scss
@@ -111,6 +111,7 @@ $height5: $width5 / $aspect-ratio;
 
     .metadata {
       display: contents;
+      flex-shrink: 0;
     }
 
     .public {
